# onednn-dnnopt

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_4x16_perf.cpp  bench_blas.cpp  bench_conv.cpp  bench_elementwise.cpp  bench_gemm.cpp  bench_pooling.cpp  bench_small_gemm.cpp  bench_small_vs_openblas.cpp  hwcaps_report.cpp
docs/: acl_integration_plan.md  dnnopt_vs_onednn_summary.md  performance_summary_phase9.md
include/dnnopt/: aligned_alloc.h  arm_hwcaps.h  timer.h
include/dnnopt/blas/: cblas.h
include/dnnopt/conv/: conv.h
include/dnnopt/gemm/: gemm.h  gemm_config.h  gemm_driver_generic.h  gemm_threading.h  gemm_types.h  gemm_ukernel_registry.h
integration/onednn/: 0001-dnnopt-integration.patch  README.md
scripts/: profile.sh  roofline.py
src/: CMakeLists.txt
src/blas/: blas_fortran.cpp  blas_utils.cpp  cblas_sgemm.cpp
src/conv/: conv2d.cpp  conv_postops.cpp  im2col.cpp
src/gemm/: gemm.cpp  gemm_adaptive_tile_fp32.cpp  gemm_driver_bf16.cpp  gemm_driver_generic.cpp  gemm_driver_unpacked_fp32.cpp  gemm_kernel_asm_fp32.cpp  gemm_pack_bf16.cpp  gemm_pack_fp32.cpp  gemm_pack_int8.cpp  gemm_smallm_fp32.cpp  gemm_smallm_fp32_v2.cpp  gemm_smallm_wide_fp32.cpp  gemm_threading.cpp  gemm_tiny_fp32.cpp  gemm_ukernel_bf16_neon.cpp  gemm_ukernel_bf16_sme.cpp  gemm_ukernel_bf16_sve.cpp  gemm_ukernel_fp32_8x16.cpp  gemm_ukernel_fp32_asm.cpp  gemm_ukernel_fp32_neon.cpp  gemm_ukernel_fp32_npo2.cpp  gemm_ukernel_fp32_sme.cpp  gemm_ukernel_fp32_sve.cpp  gemm_ukernel_int8_neon.cpp  gemm_ukernel_int8_sme.cpp  gemm_ukernel_int8_sve.cpp  gemm_ukernel_registry.cpp
src/hwcaps/: arm_hwcaps.cpp
src/utils/: aligned_alloc.cpp  timer.cpp
tests/: CMakeLists.txt  bench_inference_workload.cpp  bench_onednn_sgemm.cpp  bench_tf_e2e_inference.py  bench_tf_inference.py  test_cblas.cpp  test_conv_correctness.cpp  test_elementwise_correctness.cpp  test_gemm_correctness.cpp  test_hwcaps.cpp  test_utils.h
tests/integration/: test_dispatch_logic.cpp
tools/: gen_asm_kernel.py
